--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: |
-           touch.env
+    - run: 
+           touch .env
            echo "${{ secrets.AZURE_SQL_USERNAME }}" > .env
            echo "${{ secrets.AZURE_SQL_SERVER }}" > .env
            echo "${{ secrets.AZURE_SQL_PORT }}" > .env
