--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: 
+    - run: |
            touch .env
            echo AZURE_SQL_USERNAME=${{ secrets.AZURE_SQL_USERNAME }} >> .env
            echo AZURE_SQL_SERVER=${{ secrets.AZURE_SQL_SERVER }} >> .env
