--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ AZURE_SQL_SERVER=studio-server1.database.windows.net
 AZURE_SQL_DATABASE=smsDB
 AZURE_SQL_PORT=1433
 AZURE_SQL_USERNAME=IsharaDayasena
-AZURE_SQL_PASSWORD="Ishara1999"
+AZURE_SQL_PASSWORD=Ishara1999
 AZURE_SQL_AUTHENTICATIONTYPE=azure-active-directory-default
